gitops/apps/requestrr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requestrr
  labels: &default
    app: requestrr
    part-of: requestrr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels: *default
  template:
    metadata:
      labels: *default
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: requestrr
          image: ghcr.io/hotio/requestrr:release-2.1.8
          ports:
            - name: requestrr
              containerPort: 4545
          volumeMounts:
            - name: config
              mountPath: /config
          readinessProbe:
            tcpSocket:
              port: requestrr
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: requestrr
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
