gitops/apps/requestrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestrr
spec:
  type: ClusterIP
  ports:
    - port: 4545
      targetPort: requestrr
  selector:
    app: requestrr
    part-of: requestrr
---
